<resources>
    <string name="app_name">Employees</string>
    <string name="employees">Employees</string>
    <string name="no_desc">no_desc</string>
    <string name="employee">Employee</string>
    <string name="manager">Manager</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="confirm_password">Confirm password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">"Don't have an account?   "</string>
    <string name="already_have_an_account">"Already Have an Account?   "</string>
    <string name="your_email">Your email</string>
    <string name="mary123_nhs_net">Mary123@NHS.net</string>
    <string name="submit">Submit</string>
    <string name="please_check_email_for_verification_code">Please check email for verification code</string>
    <string name="new_password">New password</string>
    <string name="back">Back</string>
    <string name="hr_details">HR Details</string>
    <string name="work_contract">Work contract</string>
    <string name="staff_number">Staff Number</string>
    <string name="user_name">User Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="hire_date">Hire Date</string>
    <string name="job_role">Job Role</string>
    <string name="mobile_telephone">Mobile/ Telephone</string>
    <string name="today">Today</string>
    <string name="log_out">Log Out</string>
    <string name="timesheets">Timesheets</string>
    <string name="available_bank_duties">Available Bank Duties</string>
    <string name="view_roster">View Roster</string>
    <string name="my_profile">My Profile</string>
    <string name="rest">Rest</string>
    <string name="work_time">Work Time</string>
    <string name="general">General</string>
    <string name="setting">Setting</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_light">Notifications Light</string>
    <string name="sound">Sound</string>
    <string name="auto_update">Auto Update</string>
    <string name="support">Support</string>
    <string name="term_policy"><![CDATA[Term & Policy]]></string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="about">About</string>
    <string name="reset">Reset</string>
    <string name="rate_app">Rate app</string>
    <string name="share_app">Share app</string>
    <string name="shifts">Shifts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_id">User ID</string>
    <string name="name">Name</string>
    <string name="role">Role</string>
    <string name="new_employee">New Employee</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="change_password">Change Password</string>
    <string name="show_details">Show Details</string>
    <string name="remove_this_employee">Remove this Employee?</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="employee_profile">Employee Profile</string>
    <string name="booked_to">Booked to</string>
    <string name="work_unit">Work Unit</string>
    <string name="reasign">Reasign</string>
    <string name="cancel_shift">Cancel Shift</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_shift">Confirm Shift</string>
    <string name="invalid_email">Invalid email</string>
    <string name="pass_length_warning">Password length must be 6 character</string>
    <string name="pass_not_matched">Password not matched</string>
    <string name="email_or_pass_is_incorrect">Email or password is incorrect</string>
    <string name="login_successful">Login successful</string>
    <string name="settings">Settings</string>
    <string name="pass_validation">Your password needs to be between 8 and 30 characters long and
contain one uppercase letter, one symbol, and a number</string>
    <string name="userid_validation">User id must be 6 digit</string>
    <string name="not_matched">Password not matched</string>
    <string name="select_birth_date">Select birth date</string>
    <string name="select_joining_date">Select Joining Date</string>
    <string name="add">Add</string>
    <string name="select">Select</string>
    <string name="RGN">RGN</string>
    <string name="HCS">HCS</string>
    <string name="This_field_can_not_be_empty">This field can not be empty</string>
    <string name="user_id_must_be_six_digit">User id must be 6 digit</string>
    <string name="your_password_must_be_greater_then_8_and_less_then_30">Your password must be 8 to 30 character</string>
    <string name="password_not_matched">Password not matched</string>
    <string name="select_role">Select Role</string>
    <string name="select_shift">Select shift</string>
    <string name="select_ward">Select Ward</string>
    <string name="select_date">Select Date</string>
    <string name="no_shift_for_today">No shift for Today</string>
    <string name="enter_new_pass">Enter new password</string>
    <string name="enter_confirm_pass">Enter confirm password</string>
    <string name="current_pass_not_found">Current password Not found</string>
    <string name="manager_employee">Select Manager or Employee</string>
    <string name="invalid_for_manager">Invalid Credential for manager</string>
    <string name="invalid_for_employee">Invalid Credential for employee</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="enter_ward_name">Enter Ward name</string>
    <string name="update">Update</string>
    <string name="ward">Ward</string>
    <string name="about_the_app">About The App</string>
    <string name="sample_text">Android Studio is the official integrated development environment for Google\'s Android operating system, built on JetBrains\' IntelliJ IDEA software and designed specifically for Android development.</string>
    <string name="successfully_send">Successfully Send</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="successfully_updated">Password successfully Updated!!</string>
</resources>