<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="300dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginTop="90dp"
        android:background="@drawable/back_add_new_employee"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/about_the_app"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/sample_text"
            android:textStyle="normal"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <ImageView
        android:background="@drawable/rounded_solid_rectangle"
        android:elevation="1dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:id="@+id/imageClose"
        android:padding="8dp"
        android:src="@drawable/ic_baseline_close_24"
        android:layout_gravity="end"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/no_desc" />


</RelativeLayout>