<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="register"
            type="com.example.employees.viewModel.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        tools:context=".SignUpActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:background="@color/white"
                    android:padding="32dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <LinearLayout
                        android:layout_alignParentBottom="true"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="120dp"
                            android:layout_height="52dp"
                            android:src="@drawable/app_logo"
                            android:contentDescription="@string/no_desc" />

                        <TextView
                            android:layout_gravity="end"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/employees"
                            android:textColor="@color/colorPrimary"
                            android:textSize="50sp" />

                    </LinearLayout>

                </RelativeLayout>

                <View
                    android:background="@color/login_middle_color"
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

                <LinearLayout
                    android:padding="32dp"
                    android:orientation="vertical"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_marginTop="30dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:text="@{register.email}"
                            android:padding="12dp"
                            android:maxLines="2"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:inputType="textEmailAddress|textMultiLine"
                            android:layout_marginBottom="20dp"
                            android:hint="@string/email"
                            android:fontFamily="@font/montserrat_light"
                            android:textColorHint="@color/textHintColor"
                            android:background="@drawable/rounded_solid_small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:text="@{register.password}"
                            android:padding="12dp"
                            android:maxLines="2"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:inputType="textPassword|textMultiLine"
                            android:layout_marginBottom="20dp"
                            android:hint="@string/password"
                            android:fontFamily="@font/montserrat_light"
                            android:textColorHint="@color/textHintColor"
                            android:background="@drawable/rounded_solid_small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:text="@{register.confirm_password}"
                            android:padding="12dp"
                            android:maxLines="2"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:inputType="textPassword|textMultiLine"
                            android:hint="@string/confirm_password"
                            android:fontFamily="@font/montserrat_light"
                            android:textColorHint="@color/textHintColor"
                            android:background="@drawable/rounded_solid_small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:onClick="@{()->register.onSignUpClick()}"
                            android:layout_gravity="end"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:text="@string/sign_up"
                            android:fontFamily="@font/montserrat_light"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/rectangle_stroke"
                            android:layout_width="100dp"
                            android:layout_height="40dp" />

                        <LinearLayout
                            android:gravity="center"
                            android:layout_marginTop="45dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:text="@string/already_have_an_account"
                                android:fontFamily="@font/poppins_regular"
                                android:textSize="12sp"
                                android:textColor="@color/white"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:onClick="@{()->register.onLoginClick()}"
                                android:id="@+id/textSignIn"
                                android:text="@string/sign_in"
                                android:fontFamily="@font/poppins_bold"
                                android:textSize="12sp"
                                android:textColor="@color/white"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>


    </LinearLayout>
</layout>