<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.example.employees.viewModel.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        tools:context=".LoginActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:background="@color/white"
                    android:padding="32dp"
                    android:layout_width="match_parent"
                    android:layout_height="200dp">

                    <LinearLayout
                        android:layout_alignParentBottom="true"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="120dp"
                            android:layout_height="52dp"
                            android:src="@drawable/app_logo"
                            android:contentDescription="@string/no_desc" />

                        <TextView
                            android:layout_gravity="end"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/employees"
                            android:textColor="@color/colorPrimary"
                            android:textSize="50sp" />

                    </LinearLayout>

                </RelativeLayout>

                <View
                    android:background="@color/login_middle_color"
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

                <LinearLayout
                    android:padding="32dp"
                    android:orientation="vertical"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="vertical"
                        android:layout_marginTop="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <RadioGroup
                            android:id="@+id/radioGroup"
                            android:visibility="visible"
                            android:checkedButton="@={loginViewModel.radio_checked}"
                            android:weightSum="2"
                            android:layout_marginBottom="32dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <RadioButton
                                android:id="@+id/radioButtonEmployee"
                                android:layout_marginEnd="16dp"
                                android:background="@drawable/role_selector"
                                android:textColor="@drawable/role_text_color_selector"
                                android:text="@string/employee"
                                android:padding="12dp"
                                android:gravity="center"
                                android:button="@android:color/transparent"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content" />

                            <RadioButton
                                android:id="@+id/radioButtonManager"
                                android:layout_marginEnd="16dp"
                                android:background="@drawable/role_selector"
                                android:textColor="@drawable/role_text_color_selector"
                                android:text="@string/manager"
                                android:padding="12dp"
                                android:gravity="center"
                                android:button="@android:color/transparent"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content" />

                        </RadioGroup>

                        <EditText
                            android:text="@={loginViewModel.email}"
                            android:padding="12dp"
                            android:maxLines="2"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:inputType="textEmailAddress|textMultiLine"
                            android:layout_marginBottom="20dp"
                            android:hint="@string/email"
                            android:fontFamily="@font/montserrat_light"
                            android:textColorHint="@color/textHintColor"
                            android:background="@drawable/rounded_solid_small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:text="@={loginViewModel.password}"
                            android:padding="12dp"
                            android:maxLines="2"
                            android:textSize="16sp"
                            android:textColor="@color/black"
                            android:inputType="textPassword|textMultiLine"
                            android:hint="@string/password"
                            android:fontFamily="@font/montserrat_light"
                            android:textColorHint="@color/textHintColor"
                            android:background="@drawable/rounded_solid_small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:onClick="@{()->loginViewModel.onForgotPasswordClick()}"
                            android:id="@+id/textForgotPassword"
                            android:layout_gravity="center_horizontal"
                            android:padding="8dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/forgot_your_password"
                            android:textSize="12sp"
                            android:textColor="@color/white"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:fontFamily="@font/poppins_regular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/buttonLogin"
                            android:onClick="@{()->loginViewModel.onLoginClick()}"
                            android:layout_gravity="end"
                            android:textAlignment="center"
                            android:gravity="center"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:text="@string/log_in"
                            android:fontFamily="@font/montserrat_light"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/rectangle_stroke"
                            android:layout_width="100dp"
                            android:layout_height="40dp" />

                        <LinearLayout
                            android:visibility="gone"
                            android:gravity="center"
                            android:layout_marginTop="45dp"
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:text="@string/don_t_have_an_account"
                                android:fontFamily="@font/poppins_regular"
                                android:textSize="12sp"
                                android:textColor="@color/white"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content" />
                            

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>


    </LinearLayout>
</layout>