<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.fragment.SettingFragment">

    <!--<RelativeLayout
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_icon_back"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/setting"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_centerInParent="true"
            android:fontFamily="@font/montserrat_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>-->

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"
            android:textColor="@color/setting_text_heading_color"
            android:text="@string/general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/setting_secondary_text_color"
                    android:text="@string/notifications"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    app:track="@drawable/custom_track"
                    android:thumb="@drawable/custom_thumb"
                    android:layout_height="20dp"/>

            </RelativeLayout>

            <View
                android:layout_marginBottom="16dp"
                android:background="@color/divider_color"
                android:layout_width="match_parent"
                android:layout_height="1pt"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/setting_secondary_text_color"
                    android:text="@string/notifications_light"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    app:track="@drawable/custom_track"
                    android:thumb="@drawable/custom_thumb"
                    android:layout_height="20dp"/>

            </RelativeLayout>

            <View
                android:layout_marginBottom="16dp"
                android:background="@color/divider_color"
                android:layout_width="match_parent"
                android:layout_height="1pt"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/setting_secondary_text_color"
                    android:text="@string/sound"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:checked="true"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    app:track="@drawable/custom_track"
                    android:thumb="@drawable/custom_thumb"
                    android:layout_height="20dp"/>

            </RelativeLayout>

            <View
                android:layout_marginBottom="16dp"
                android:background="@color/divider_color"
                android:layout_width="match_parent"
                android:layout_height="1pt"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/poppins_regular"
                    android:textColor="@color/setting_secondary_text_color"
                    android:text="@string/auto_update"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    app:track="@drawable/custom_track"
                    android:thumb="@drawable/custom_thumb"
                    android:layout_height="20dp"/>

            </RelativeLayout>

            <View
                android:layout_marginBottom="32dp"
                android:background="@color/divider_color"
                android:layout_width="match_parent"
                android:layout_height="1pt"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"
            android:textColor="@color/setting_text_heading_color"
            android:text="@string/support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="#77838F"
            android:text="@string/term_policy"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@color/red"
            android:text="@string/log_out"
            android:textSize="14sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>